Add Menagerie checkbox to webpage

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -65,6 +65,10 @@
                     <label for="Renaissance">Renaissance</label>
                 </span>
                 <span>
+                    <input type="checkbox" name="Menagerie" id="Menagerie" value="Menagerie" checked>
+                    <label for="Menagerie">Menagerie</label>
+                </span>
+                <span>
                     <input type="checkbox" name="Antiquities" id="Antiquities" value="Antiquities" checked>
                     <label for="Antiquities">Antiquities</label>
                 </span>
