Add option to enforce Alchemy rule

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -47,6 +47,12 @@
                 <span>
                     <input type="checkbox" class="set" name="Alchemy" id="Alchemy" value="Alchemy" checked>
                     <label for="Alchemy">Alchemy</label>
+                    <fieldset class="set-options" id="alchemy-options">
+                        <span>
+                            <input type="checkbox" class="set-option" name="enforce-alchemy-rule" id="enforce-alchemy-rule" value="enforce-alchemy-rule" checked>
+                            <label for="enforce-alchemy-rule">Enforce Alchemy rule</label>
+                        </span>
+                    </fieldset>
                 </span>
                 <span>
                     <input type="checkbox" class="set" name="Prosperity" id="Prosperity" value="Prosperity" checked>
