Add Allies checkbox

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -249,6 +249,17 @@
                         />
                         <label for="Antiquities">Antiquities</label>
                     </span>
+                    <span>
+                        <input
+                            type="checkbox"
+                            class="set"
+                            name="Allies"
+                            id="Allies"
+                            value="Allies"
+                            checked
+                        />
+                        <label for="Allies">Allies</label>
+                    </span>
                 </fieldset>
                 <fieldset id="moreOptions">
                     <span>
