Add support for prosperity second edition

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -138,6 +138,33 @@
                             checked
                         />
                         <label for="Prosperity">Prosperity</label>
+                        <fieldset class="set-options" id="prosperity-options">
+                            <span>
+                                <input
+                                    type="checkbox"
+                                    class="set-option"
+                                    name="prosperity-first-edition"
+                                    id="prosperity-first-edition"
+                                    value="prosperity-first-edition"
+                                />
+                                <label for="prosperity-first-edition"
+                                    >Include first edition cards</label
+                                >
+                            </span>
+                            <span>
+                                <input
+                                    type="checkbox"
+                                    class="set-option"
+                                    name="prosperity-second-edition"
+                                    id="prosperity-second-edition"
+                                    value="prosperity-second-edition"
+                                    checked
+                                />
+                                <label for="prosperity-second-edition"
+                                    >Include second edition cards</label
+                                >
+                            </span>
+                        </fieldset>
                     </span>
                     <span>
                         <input
