--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -101,6 +101,33 @@
                             checked
                         />
                         <label for="Seaside">Seaside</label>
+                        <fieldset class="set-options" id="seaside-options">
+                            <span>
+                                <input
+                                    type="checkbox"
+                                    class="set-option"
+                                    name="seaside-first-edition"
+                                    id="seaside-first-edition"
+                                    value="seaside-first-edition"
+                                />
+                                <label for="seaside-first-edition"
+                                    >Include first edition cards</label
+                                >
+                            </span>
+                            <span>
+                                <input
+                                    type="checkbox"
+                                    class="set-option"
+                                    name="seaside-second-edition"
+                                    id="seaside-second-edition"
+                                    value="seaside-second-edition"
+                                    checked
+                                />
+                                <label for="seaside-second-edition"
+                                    >Include second edition cards</label
+                                >
+                            </span>
+                        </fieldset>
                     </span>
                     <span>
                         <input
