Add support for hinterlands second edition

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -160,6 +160,33 @@
                             checked
                         />
                         <label for="Hinterlands">Hinterlands</label>
+                        <fieldset class="set-options" id="hinterlands-options">
+                            <span>
+                                <input
+                                    type="checkbox"
+                                    class="set-option"
+                                    name="hinterlands-first-edition"
+                                    id="hinterlands-first-edition"
+                                    value="hinterlands-first-edition"
+                                />
+                                <label for="hinterlands-first-edition"
+                                    >Include first edition cards</label
+                                >
+                            </span>
+                            <span>
+                                <input
+                                    type="checkbox"
+                                    class="set-option"
+                                    name="hinterlands-second-edition"
+                                    id="hinterlands-second-edition"
+                                    value="hinterlands-second-edition"
+                                    checked
+                                />
+                                <label for="hinterlands-second-edition"
+                                    >Include second edition cards</label
+                                >
+                            </span>
+                        </fieldset>
                     </span>
                     <span>
                         <input
