Add Plunder to the front end

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -355,6 +355,17 @@
                         />
                         <label for="Allies">Allies</label>
                     </span>
+                    <span>
+                        <input
+                            type="checkbox"
+                            class="set"
+                            name="Plunder"
+                            id="Plunder"
+                            value="Plunder"
+                            checked
+                        />
+                        <label for="Plunder">Plunder</label>
+                    </span>
                 </fieldset>
                 <fieldset id="moreOptions">
                     <span>
