Add class-based randomizer to website

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -379,6 +379,18 @@
                             >Maximum 2 landscape cards</label
                         >
                     </span>
+                    <span>
+                        <input
+                            type="checkbox"
+                            name="advanced-randomization"
+                            id="advanced-randomization"
+                            value="advanced-randomization"
+                            checked
+                        />
+                        <label for="advanced-randomization"
+                            >Use advanced randomization</label
+                        >
+                    </span>
                 </fieldset>
                 <input type="submit" id="randomize" value="Randomize" />
             </form>
