--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -29,6 +29,7 @@
         <div class="wrapper">
             <form id="options">
                 <fieldset id="sets">
+                    <header>Official sets</header>
                     <span>
                         <input
                             type="checkbox"
@@ -368,6 +369,7 @@
                     </span>
                 </fieldset>
                 <fieldset id="moreOptions">
+                    <header>Options</header>
                     <span>
                         <input
                             type="checkbox"
