Move Antiquities to its own section (and default it off)

--- a/website/randomizer.html
+++ b/website/randomizer.html
@@ -337,17 +337,6 @@
                         <input
                             type="checkbox"
                             class="set"
-                            name="Antiquities"
-                            id="Antiquities"
-                            value="Antiquities"
-                            checked
-                        />
-                        <label for="Antiquities">Antiquities</label>
-                    </span>
-                    <span>
-                        <input
-                            type="checkbox"
-                            class="set"
                             name="Allies"
                             id="Allies"
                             value="Allies"
@@ -365,6 +354,19 @@
                             checked
                         />
                         <label for="Plunder">Plunder</label>
+                    </span>
+                </fieldset>
+                <fieldset id ="fan-sets">
+                    <header>Fan sets</header>
+                    <span>
+                        <input
+                            type="checkbox"
+                            class="set"
+                            name="Antiquities"
+                            id="Antiquities"
+                            value="Antiquities"
+                        />
+                        <label for="Antiquities">Antiquities</label>
                     </span>
                 </fieldset>
                 <fieldset id="moreOptions">
